--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
     "method-override": "^3.0.0",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "puppeteer": "^21.3.6"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
