--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nodejs-notes-app",
+  "name": "orden-trabajo-app",
   "version": "2.0.1",
-  "description": "Notes App",
+  "description": "Ordenes de trabajo",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -22,6 +22,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "puppeteer": "^21.3.6"
