--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
+    "csv-parser": "^3.0.0",
+    "datatables.net-dt": "^1.13.6",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "method-override": "^3.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
